--- a/my-project/index.html
+++ b/my-project/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/move-contabildade/my-project/public/logo-sem-fundo.svg" />
